wtx-macros-tests/tests/fail/bad_before_sending.stderr
error: `#[pkg::before_sending]` must be an async function named `before_sending` containing any combination of `api: &mut SomeApi`, `params: &mut SomePackageParams` or `res_params: &mut SomeResponseParams`.
 --> tests/fail/bad_before_sending.rs:3:10
  |
3 |   #[pkg::before_sending]
  |          ^^^^^^^^^^^^^^

error: aborting due to 1 previous error

